src/objects/npsp__DeploymentEvent__e.object
<CustomObject>
    <fields>
        <fullName>npsp__CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__DeploymentId__c</fullName>
        <label>Deployment ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Deployment Event</label>
    <pluralLabel>DeploymentEvent</pluralLabel>
</CustomObject>